--- a/src/app/components/sites/home/profile/profile.component.html
+++ b/src/app/components/sites/home/profile/profile.component.html
@@ -1,13 +1,8 @@
 <div class="container">
   <div class="container__text">
-    <p>Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-      Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-      Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-      Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-      Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-      Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-      Lorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit aLorem ipsum dolor sit a
-    </p>
+    <ngx-typed-js [strings]="[text]" [typeSpeed]="1" [showCursor]="true">
+    <p class="typing"></p>
+    </ngx-typed-js>
   </div>
   <img alt="profile" src="assets/profile.jpg">
 </div>
