fix navigation bar

--- a/src/app/components/shared/navigation/navigation.component.less
+++ b/src/app/components/shared/navigation/navigation.component.less
@@ -13,4 +13,9 @@
       align-items: center;
       gap: 10px;
     }
+
+  .active {
+    background-color: #ff5252;
+    border-radius: 8px;
+  }
 }
