--- a/src/app/components/shared/navigation/navigation.component.html
+++ b/src/app/components/shared/navigation/navigation.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <app-navigation-item *ngFor="let item of navItems"
-      [iconName]="item.iconName"
-      [displayName]="item.displayName">
+                         [routerLink]="item.routerLink"
+                         [class.active]="router.url == '/' + item.displayName.toLowerCase()"
+                         [iconName]="item.iconName"
+                         [displayName]="item.displayName">
     </app-navigation-item>
 </div>
