--- a/src/app/components/sites/home/profile/profile.component.less
+++ b/src/app/components/sites/home/profile/profile.component.less
@@ -14,9 +14,11 @@
     }
 
     img {
+      flex-shrink: 0;
       width: 420px;
       border-radius: 360px;
       box-shadow: #181818 0 0 10px 0;
+      min-height: 100%;
     }
   }
 }
