--- a/src/app/components/sites/projects/project-entry/project-entry.component.html
+++ b/src/app/components/sites/projects/project-entry/project-entry.component.html
@@ -1,9 +1,11 @@
 <div class="container" (click)="openLink(project.gitHubLink)">
   <h2>{{ project.displayName }}</h2>
-  <p>{{ project.displayName }}</p>
-  <div class="container__programming-languages">
-    <app-programming-language *ngFor="let language of project.programmingLanguages"
-      [programmingLanguage]="language">
-    </app-programming-language>
+  <p>{{ project.description }}</p>
+  <div class="container__content">
+    <div class="container__content--programming-languages">
+      <app-programming-language *ngFor="let language of project.programmingLanguages"
+        [programmingLanguage]="language">
+      </app-programming-language>
+    </div>
   </div>
 </div>
