--- a/src/app/components/sites/projects/project-entry/project-entry.component.less
+++ b/src/app/components/sites/projects/project-entry/project-entry.component.less
@@ -12,11 +12,21 @@
       letter-spacing: 2px;
     }
 
-    &__programming-languages {
+    p {
+      width: 90%;
+      text-align: left;
+    }
+
+    &__content {
       display: flex;
-      gap: 20px;
-      position: relative;
-      top: 80px;
+      flex-direction: column;
+      justify-content: flex-end;
+
+      &--programming-languages {
+        display: flex;
+        gap: 20px;
+        margin-top: 40px;
+      }
     }
 
     &:hover {
