--- a/src/app/components/sites/home/home.component.html
+++ b/src/app/components/sites/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container__image">
     <h1 class="container__image--title">relativv DEV</h1>
-    <img alt="code" ngSrc="assets/code.jpg" height="960" width="1440">
+    <img alt="code" src="assets/code.jpg">
   </div>
   <app-profile></app-profile>
 </div>
