--- a/src/app/components/sites/home/home.component.less
+++ b/src/app/components/sites/home/home.component.less
@@ -9,6 +9,7 @@
         z-index: 100;
         font-size: 6em;
         letter-spacing: 9px;
+        text-align: center;
       }
 
       img {
@@ -21,6 +22,13 @@
         position: absolute;
         top: 0;
         left: 0;
+
+        @media(max-width: 1640px) {
+          height: 250px;
+        }
+        @media(max-height: 640px) {
+          height: 250px;
+        }
       }
     }
   }
