--- a/src/app/components/sites/projects/project-entry/project-entry.component.less
+++ b/src/app/components/sites/projects/project-entry/project-entry.component.less
@@ -8,6 +8,11 @@
     padding-left: 20px;
     transition: 0.2s;
 
+    @media(max-width: 700px) {
+      width: 390px;
+      height: 330px;
+    }
+
     h2 {
       letter-spacing: 2px;
     }
