--- a/src/app/components/sites/projects/projects.component.less
+++ b/src/app/components/sites/projects/projects.component.less
@@ -11,5 +11,18 @@
       gap: 20px;
       margin-top: 48px;
     }
+
+    @media(max-width: 1700px) {
+      width: 60%;
+      margin: auto;
+
+      &__projects {
+        justify-content: center;
+      }
+    }
+
+    @media(max-width: 700px) {
+      width: 40%;
+    }
   }
 }
