--- a/src/app/components/sites/skills/skills.component.less
+++ b/src/app/components/sites/skills/skills.component.less
@@ -3,6 +3,10 @@
     width: 800px;
     margin: 100px auto auto;
 
+    @media(max-width: 1400px) {
+      width: 60%;
+    }
+
     h2 {
       margin-top: 70px;
     }
