--- a/src/app/components/shared/footer/footer.component.less
+++ b/src/app/components/shared/footer/footer.component.less
@@ -10,6 +10,14 @@
     justify-content: center;
     align-items: center;
 
+    @media(max-width: 1640px) {
+      margin-top: 300px;
+    }
+
+    @media(max-width: 1000px) {
+      margin-top: 220px;
+    }
+
     &--github {
       width: 33px;
       height: 33px;
