--- a/src/app/components/sites/home/home.component.less
+++ b/src/app/components/sites/home/home.component.less
@@ -7,18 +7,25 @@
       &--title {
         position: absolute;
         z-index: 100;
-        font-size: 6em;
-        letter-spacing: 9px;
         text-align: center;
+        width: 1000px;
+        margin-top: 50px;
+
+        @media(max-width: 1640px) {
+          width: 350px;
+        }
+        @media(max-height: 640px) {
+          width: 350px;
+        }
       }
 
-      img {
+      &--background {
         z-index: -1;
         width: 100%;
         height: 350px;
         object-fit: cover;
-        filter: blur(8px);
-        -webkit-filter: blur(8px);
+        filter: blur(11px);
+        -webkit-filter: blur(11px);
         position: absolute;
         top: 0;
         left: 0;
