--- a/src/app/components/sites/projects/projects.component.less
+++ b/src/app/components/sites/projects/projects.component.less
@@ -10,7 +10,12 @@
       justify-content: space-between;
       gap: 20px;
       margin-top: 48px;
-    }
+
+      @media(max-width: 1700px) {
+        justify-content: flex-end;
+        margin-left: 170px;
+      }
+      }
 
     @media(max-width: 1700px) {
       width: 60%;
@@ -22,7 +27,7 @@
     }
 
     @media(max-width: 700px) {
-      width: 40%;
+      width: 50%;
     }
   }
 }
