--- a/src/app/components/sites/tech/tech.component.less
+++ b/src/app/components/sites/tech/tech.component.less
@@ -7,6 +7,9 @@
     width: 800px;
     margin: auto;
     text-align: center;
+    @media(max-width: 1400px) {
+      max-width: 80%;
+    }
   }
 
   .container {
