--- a/src/app/components/sites/home/profile/profile.component.html
+++ b/src/app/components/sites/home/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="container__text">
-    <ngx-typed-js *ngIf="!typedJsSucceed; else regularText" contentType="html" [strings]="[text]" [typeSpeed]="1" [showCursor]="true">
+    <ngx-typed-js *ngIf="!typedJsSucceed; else regularText" contentType="html" [strings]="[text]" [typeSpeed]="1" [ [showCursor]="true">
       <p class="typing"></p>
     </ngx-typed-js>
 
