css improvements + remove typejs

--- a/src/app/components/sites/home/home.component.less
+++ b/src/app/components/sites/home/home.component.less
@@ -1,4 +1,5 @@
 :host {
+
   .container {
     &__image {
       display: flex;
@@ -12,10 +13,10 @@
         margin-top: 50px;
 
         @media(max-width: 1640px) {
-          width: 350px;
+          width: 650px;
         }
-        @media(max-height: 640px) {
-          width: 350px;
+        @media(max-width: 640px) {
+          width: 400px;
         }
       }
 
