--- a/src/styles.less
+++ b/src/styles.less
@@ -1,11 +1,23 @@
 html, body {
-    height: 100%; 
+    height: 100%;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #181818;
     color: #fff;
+
+    @media(max-height: 900px) {
+      min-height: 145vh;
+    }
+}
+
+img {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
