--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,3 +1,4 @@
 <div class="container">
   <a href="https://github.com/relativvv" target="_blank"><img class="container--github" src="assets/github.png" alt="github"></a>
+  <a href="https://www.linkedin.com/in/robin-schulte-513b03239/" target="_blank"><img class="container--github" src="assets/linkedin.png" alt="github"></a>
 </div>
