--- a/src/app/components/shared/footer/footer.component.less
+++ b/src/app/components/shared/footer/footer.component.less
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 24px;
 
     @media(max-width: 1640px) {
       margin-top: 300px;
