--- a/src/app/components/sites/home/profile/profile.component.less
+++ b/src/app/components/sites/home/profile/profile.component.less
@@ -14,6 +14,12 @@
       font-size: 18px;
       line-height: 1.8em;
       min-width: 750px;
+
+      &__paragraph {
+        &--link {
+          color: orangered;
+        }
+      }
     }
 
     img {
