--- a/src/app/components/sites/home/profile/profile.component.html
+++ b/src/app/components/sites/home/profile/profile.component.html
@@ -1,17 +1,13 @@
 <div class="container">
   <div class="container__text">
-     <p class="container__text__paragraph" [innerHTML]="text">
-       Hello! I'm Robin, an experienced full stack developer, with expertise in Angular and Symfony frameworks. I have a strong background in building robust and user-friendly web applications.\n
-       Currently, I work at a leading software company, contributing to the development of e-commerce solutions.<br /> My skills in <b>Angular and Symfony</b> have been instrumental in helping businesses thrive in the digital landscape.\n
-       I have a solid understanding of front-end and back-end development, including <b>HTML, LESS, and TypeScript</b>. I also have experience with databases like <b>MySQL</b> for efficient data handling.\n
-       What sets me apart is my problem-solving mindset. I thrive in challenging situations, always seeking innovative solutions. Staying up-to-date with industry trends and technologies is crucial to me.\n
+     <p class="container__text__paragraph">
+       Hello! I'm Robin, an experienced full stack developer, with expertise in Angular and Symfony frameworks. I have a strong background in building robust and user-friendly web applications.
+       Currently, I work at a leading software company, contributing to the development of e-commerce solutions.<br /> My skills in <b>Angular and Symfony</b> have been instrumental in further developing the digital landscape.
+       I have a solid understanding of front-end and back-end development, including <b>HTML, LESS, and TypeScript</b>. I also have experience with databases like <b>MySQL</b> for efficient data handling.<br />
+       What sets me apart is my problem-solving mindset. I thrive in challenging situations, always seeking innovative solutions. Staying up-to-date with industry trends and technologies is crucial to me.<br />
        Beyond programming, I'm an avid learner, constantly exploring diverse subjects to enhance my creativity. Thank you for visiting my portfolio, and I look forward to collaborating on exciting projects.
-       Feel free to <a class="container__text__paragraph--link" href='mailto: r.schulte@relativv.de'>reach out to me</a> for inquiries or opportunities. Let's create something amazing together!
+       Feel free to reach out to me via <a class="container__text__paragraph--link" href='mailto: r.schulte@relativv.de'>Mail</a> or <a class="container__text__paragraph--link" href='https://www.linkedin.com/in/robin-schulte-513b03239/'>LinkedIn</a> for inquiries or opportunities. Let's create something amazing together!
      </p>
-
-    <ng-template #regularText>
-      <p [innerHTML]="text"></p>
-    </ng-template>
   </div>
   <img alt="profile" src="assets/profile.jpg">
 </div>
